Lech's 21 at #850 + disabling SFP for now

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -1,7 +1,7 @@
 ############################
-# headers.js
+# /chrome/content/headers.js
 # Used in all about:ubiquity headers.
-############################
+
 ubiquity.nav.main=Tutorial
 ubiquity.nav.settings=Settings
 ubiquity.nav.commands=Your Commands
@@ -10,22 +10,59 @@ ubiquity.nav.support=Support
 ubiquity.nav.hackubiquity=Hack Ubiquity
 
 ############################
-# prefkeys.js
-# chrome://ubiquity/content/settings.xhtml
+# /chrome/content/localization-template.js
+# /chrome/content/cmdlist.js
+#
+# chrome://ubiquity/content/localization-template.xhtml
+# chrome://ubiquity/content/cmdlist.xhtml
+#
+# the "show/hide help" messages.
+
+ubiquity.showhidehelp.show=Show Help
+ubiquity.showhidehelp.hide=Hide Help
+
+# end global properties, begin by file name.
+
 ############################
+# /chrome/content/prefkeys.js
+# chrome://ubiquity/content/settings.xhtml
+
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
 ubiquity.prefkeys.clickhere=Click here to change
-# After a change occurs this is the confirmation along with modifier names
 ubiquity.prefkeys.confirmchange=Your key has been changed to %S.
-
 # Key Combo Input for settings.xhtml (one-liner input focus)
 ubiquity.prefkeys.pressyourcombo=Press your combination...
 
 ############################
-# settings.js
-# chrome://ubiquity/content/settings.xhtml
+# /chrome/content/cmdlist.js
+# chrome://ubiquity/content/cmdlist.xhtml
+
+ubiquity.cmdlist.unsubscribefeed=unsubscribe
+ubiquity.cmdlist.feedupdated=An update for this feed is available.
+ubiquity.cmdlist.viewsource=view source
+ubiquity.cmdlist.viewfeedsource=view auto-updated source
+ubiquity.cmdlist.localetemplate=get localization template
+ubiquity.cmdlist.synonyms=also called %S
+ubiquity.cmdlist.createdby=by %S
+ubiquity.cmdlist.license=licensed as %S
+ubiquity.cmdlist.contributions=contributions by %S
+ubiquity.cmdlist.homepage=homepage
+ubiquity.cmdlist.viewmoreinfo=view more information at %S
+ubiquity.cmdlist.oldparsertitle=This command was not loaded as it is incompatible with Parser 2.
+ubiquity.cmdlist.resubscribe=resubscribe
+ubiquity.cmdlist.purge=purge
+
 ############################
+# /chrome/content/confirm-add-js.js
+# chrome://ubiquity/content/confirm-add-command.xhtml
+
+ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
+ubiquity.subscription.successheader=Subscription Successful
+
+############################
+# /chrome/content/settings.js
+# chrome://ubiquity/content/settings.xhtml
 ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
 ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
 ubiquity.settings.skinsaved=Your skin has been saved!
@@ -34,50 +71,3 @@ ubiquity.settings.skinauthor=created by %S
 ubiquity.settings.skinlicense=licensed as %S
 ubiquity.settings.viewskinsource=view source
 ubiquity.settings.uninstallskin=uninstall
-
-############################
-# confirm-add-js.js
-# chrome://ubiquity/content/confirm-add-command.xhtml
-############################
-ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
-ubiquity.subscription.successheader=Subscription Successful
-
-############################
-# localization-template.js
-# chrome://ubiquity/content/localization-template.xhtml
-#
-# cmdlist.js
-# chrome://ubiquity/content/cmdlist.xhtml
-#
-# the "show/hide help" messages.
-############################
-
-ubiquity.showhidehelp.show=Show Help
-ubiquity.showhidehelp.hide=Hide Help
-
-############################
-# cmdlist.js
-# chrome://ubiquity/content/cmdlist.xhtml
-############################
-ubiquity.cmdlist.unsubscribefeed=unsubscribe
-ubiquity.cmdlist.feedupdated=An update for this feed is available.
-ubiquity.cmdlist.viewsource=view source
-ubiquity.cmdlist.viewfeedsource=view auto-updated source
-ubiquity.cmdlist.localetemplate=get localization template
-
-ubiquity.cmdlist.synonyms=also called %S
-ubiquity.cmdlist.createdby=by %S
-ubiquity.cmdlist.license=licensed as %S
-ubiquity.cmdlist.contributions=contributions by %S
-ubiquity.cmdlist.homepage=homepage
-ubiquity.cmdlist.viewmoreinfo=view more information at %S
-
-ubiquity.cmdlist.oldparsertitle=This command was not loaded as it is incompatible with Parser 2.
-
-ubiquity.cmdlist.resubscribe=resubscribe
-ubiquity.cmdlist.purge=purge
-
-############################
-# thenext.js
-# chrome://ubiquity/content/relevant.xhtml
-############################
