--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -18,3 +18,9 @@ ubiquity.feedmanager.subscribe=Subscribe...
 ubiquity.skinsvc.saveyourskin=Save Your Skin
 ubiquity.skinsvc.installskin=Install...
 ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
+
+############################
+# /modules/stylish_feed_plugin.js
+############################
+ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
+ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
