--- a/ubiquity/chrome/locale/en-US/coreubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/coreubiquity.properties
@@ -1,11 +1,18 @@
 ############################
 # /modules/cmdmanager.js
-############################
+
 ubiquity.cmdmanager.defaulthelp=Type the name of a command and press enter to execute it, or <strong>help</strong> for assistance.
 
 ############################
-# /modules/feedmanager.js
+# /modules/cmdutils.js
+
+ubiquity.cmdutils.searchdescription=Searches %S for your words.
+ubiquity.cmdutils.searchcmd=Searches %S for: <strong>%S</strong>
+ubiquity.cmdutils.bookmarkletexec=Executes the <strong>%S</strong> bookmarklet.
+
 ############################
+# /modules/feedmanager.js
+
 ubiquity.feedmanager.didyouknow=Did you know that you have a Ubiquity command for this website?
 ubiquity.feedmanager.showme=Show me!
 ubiquity.feedmanager.dontremind=Don't remind me again for this website
@@ -14,13 +21,13 @@ ubiquity.feedmanager.subscribe=Subscribe...
 
 ############################
 # /modules/skinsvc.js
-############################
+
 ubiquity.skinsvc.saveyourskin=Save Your Skin
 ubiquity.skinsvc.installskin=Install...
 ubiquity.skinsvc.newskinfound=This page contains a Ubiquity skin. If you'd like to install the skin, please click the button to the right.
 
 ############################
 # /modules/stylish_feed_plugin.js
-############################
+
 ubiquity.stylishfeedplug.newuserstylefound=This page contains a Stylish userstyle which Ubiquity can run. If you'd like to subscribe to it, please click the button to the right.
 ubiquity.stylishfeedplug.subscriptionsuccess=Succesfully subscribed to Userstyle!
