i18n: syncing down from babelzilla in preparation for 0.5.5pre2

--- a/ubiquity/chrome/locale/ja/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ja/aboutubiquity.properties
@@ -6,12 +6,12 @@
 
 ############################
 
-ubiquity.nav.main=チュートリアル
-ubiquity.nav.settings=設定
+ubiquity.nav.main=虎の巻
+ubiquity.nav.settings=各種設定
 ubiquity.nav.commands=コマンドリスト
-ubiquity.nav.getnewcommands=コマンド入手
+ubiquity.nav.getnewcommands=コマンドを探す
 ubiquity.nav.support=サポート
-ubiquity.nav.hackubiquity=Ubiquity 開発
+ubiquity.nav.hackubiquity=ハッキング
 ############################
 
 # prefkeys.js
@@ -63,8 +63,8 @@ ubiquity.settings.uninstallskin=削除
 
 ############################
 
-ubiquity.subscription.successtitle=Ubiquity コマンドフィードを購読しました。
-ubiquity.subscription.successheader=コマンドフィードの購読完了
+ubiquity.subscription.successtitle=インストール完了 - Ubiquity
+ubiquity.subscription.successheader=インストール完了
 ############################
 
 # localization-template.js
@@ -93,20 +93,20 @@ ubiquity.showhidehelp.hide=ヘルプを隠す
 
 ############################
 
-ubiquity.cmdlist.unsubscribefeed=購読解除
-ubiquity.cmdlist.feedupdated=このフィードは更新可能です。
+ubiquity.cmdlist.unsubscribefeed=利用停止
+ubiquity.cmdlist.feedupdated=新しいバージョンがリリースされています。
 ubiquity.cmdlist.viewsource=ソースを表示
 ubiquity.cmdlist.viewfeedsource=自動更新されたソースを表示
 ubiquity.cmdlist.localetemplate=ローカライズテンプレートを取得
 ubiquity.cmdlist.synonyms=別名: %S
 ubiquity.cmdlist.createdby=作者: %S
-ubiquity.cmdlist.license=%S ライセンスが適用されています
+ubiquity.cmdlist.license=ライセンス: %S
 ubiquity.cmdlist.contributions=貢献者: %S
-ubiquity.cmdlist.homepage=ホームページ
+ubiquity.cmdlist.homepage=ホームページ: %S
 ubiquity.cmdlist.viewmoreinfo=詳細情報: %S
 ubiquity.cmdlist.oldparsertitle=このコマンドは Parser 2 と互換性がないため読み込まれません。
-ubiquity.cmdlist.resubscribe=再購読
-ubiquity.cmdlist.purge=破棄
+ubiquity.cmdlist.resubscribe=利用再開
+ubiquity.cmdlist.purge=削除
 ############################
 
 # thenext.js
