--- a/ubiquity/chrome/locale/pt-PT/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/pt-PT/aboutubiquitytutorial.properties
@@ -1,133 +1,133 @@
 ###### Tutorial start page
 
-tutorial.welcome=Welcome to the Ubiquity Tutorial.
-tutorial.fromthestart=Click Here to Start From The Beginning
-tutorial.fromthemiddle=Start from the middle:
-tutorial.howtostart=How to start Ubiquity
-tutorial.previews=Previews (Weather command)
-tutorial.suggestions=The Suggestion List (Calculate, Google)
-tutorial.selecting=Selecting, Executing (Translate, Map)
-tutorial.morecommands=How to get help and learn more commands
+tutorial.welcome=Bem-vindo ao Tutorial do Ubiquity.
+tutorial.fromthestart=Clique aqui para começar do início
+tutorial.fromthemiddle=Começar do meio:
+tutorial.howtostart=Como iniciar o Ubiquity
+tutorial.previews=Pré-visualizações (Comando tempo)
+tutorial.suggestions=A Lista de Sugestões (calcular, google)
+tutorial.selecting=Seleccionar, executar (traduzir, mapa)
+tutorial.morecommands=Como obter ajuda e aprender mais comandos
 ##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Ubiquity Tutorial, part 1 of 6: How to start Ubiquity
-tutorial.stage01p1=Welcome to the Ubiquity tutorial.
-tutorial.stage01p2=Let's get started.  To summon Ubiquity, do this now:
-tutorial.stage01p3=Hold down the
-tutorial.stage01p4=key and tap the
-tutorial.stage01p5=key.
+tutorial.stage01h1=Tutorial do Ubiquity, parte 1 de 6: Como iniciar o Ubiquity
+tutorial.stage01p1=Bem-vindo ao tutorial do Ubiquity.
+tutorial.stage01p2=Vamos começar. Para chamar o Ubiquity, faça isto:
+tutorial.stage01p3=Mantenha pressionada a tecla
+tutorial.stage01p4=e carregue na tecla
+tutorial.stage01p5=.
 ##### Stage 02
 
-tutorial.stage02p1=This is the Ubiquity <strong>input box</strong>.  You can type commands here.
-tutorial.stage02p2=If you want to get out of Ubiquity without giving a command, <strong>tap the Escape key</strong>.  Try that now.
+tutorial.stage02p1=Esta é a <strong>caixa</strong> do Ubiquity. Pode digitar os comandos aqui.
+tutorial.stage02p2=Se quiser sair do Ubiquity sem utilizar nem comando, <strong>carregue na tecla Escape</strong>. Tente agora.
 ##### Stage 03 (part 2 of 6) #####
 
-tutorial.stage03h1=Ubiquity Tutorial, part 2 of 6: Weather command and Previews
-tutorial.stage03p1=OK, so now let's learn a command. Summon Ubiquity again...
-tutorial.stage03p2=(Remember, <strong>hold down the
-tutorial.stage03p3=key and tap the
-tutorial.stage03p4=key.</strong>)
+tutorial.stage03h1=Tutorial do Ubiquity, parte 2 de 6: Comando tempo e Pré-visualizações
+tutorial.stage03p1=OK, agora vamos aprender um comando. Chame o Ubiquity novamente...
+tutorial.stage03p2=(Lembre-se, <strong>mantenha pressionada a tecla
+tutorial.stage03p3=e pressione a tecla
+tutorial.stage03p4=.</strong>)
 ##### Stage 04
 
-tutorial.stage04p1=Now type the word <strong>weather</strong>...
+tutorial.stage04p1=Agora escreva a palavra <strong>tempo</strong>...
 ##### Stage 05
 
-tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command &#8212; in this case, a weather report.
-tutorial.stage05p2=If you don't enter a location, the <em>weather</em> command takes a guess as to where you are.
-tutorial.stage05p3=Now let's give it a location: <strong>type a space, and then type 'near chicago'</strong>. (So your whole input will say: 'weather near chicago'.)
+tutorial.stage05p1=Mesmo antes que acabe de escrever, a <strong>área de pré-visualização</strong> mostra uma ante-visão dos resultados do seu comando — neste caso, um boletim meteorológico.
+tutorial.stage05p2=Se não inserir uma localização, o comando <em>tempo</em> tenta adivinhar a sua localização.
+tutorial.stage05p3=Agora vamos atribuir uma localização: <strong>dê um espaço e, de seguida, escreva 'near chicago'</strong>. (Portanto, todo o seu comando vai dizer: 'tempo near chicago').
 ##### Stage 06
 
-tutorial.stage06p1=See how that works?  Feel free to delete &quot;chicago&quot; and try some other locations.
-tutorial.stage06p2=When you're done checking the weather, <strong>hit the escape key.</strong>
+tutorial.stage06p1=Viu como funcionou? Sinta-se à vontade para apagar "near chicago" e experimentar outras localizações.
+tutorial.stage06p2=Quando acabar de explorar o comando tempo, <strong>carregue na tecla escape.</strong>
 ##### Stage 07 (part 3 of 6) #####
 
-tutorial.stage07h1=Ubiquity Tutorial, part 3 of 6: Calculate command and Abbreviations
-tutorial.stage07p1=Summon Ubiquity again, and we'll learn some more commands.
+tutorial.stage07h1=Tutorial do Ubiquity, parte 3 de 6: Comando calcular e abreviações
+tutorial.stage07p1=Chame o Ubiquity novamente, e vamos aprender mais uns comandos.
 ##### Stage 08
 
-tutorial.stage08p1=This time, <strong>type just the letter 'c'</strong> (lower-case) and see what happens.
+tutorial.stage08p1=Desta vez, <strong>escreva apenas a letra 'c'</strong>(minúscula) e veja o que acontece.
 ##### Stage 09
 
-tutorial.stage09p1=The Ubiquity <strong>suggestion list</strong> displays commands that start with the letter 'C'.
-tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't have to type the whole command name.  Just <strong>type the letters 'al'</strong> (so that your input says <strong>'cal'</strong>).
+tutorial.stage09p1=A <strong>lista de sugestões</strong> do Ubiquity mostra comandos começados pela letra 'C'.
+tutorial.stage09p2=Digamos que quer o comando <em>calcular</em>. Não tem que escrever o nome inteiro. <strong>Adicione apenas as letras 'al'</strong>(para que o seu comando diga <strong>'cal'</strong>).
 ##### Stage 10
 
-tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
+tutorial.stage10p1=Agora <strong>dê um espaço, e escreva 22/7</strong> (para que o seu comando diga <strong>'cal 22/7'</strong>.)
 ##### Stage 11
 
-tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
-tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
+tutorial.stage11p1=O comando <em>calcular</em> vai mostrar-lhe o resultado de qualquer expressão aritmética que escreva.
+tutorial.stage11p2=Quando acabar de explorar o comando <em>calcular</em>, <strong>carregue na tecla escape.</strong>
 ##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
-tutorial.stage12p1=Summon Ubiquity again...
+tutorial.stage12h1=Tutorial do Ubiquity, parte 4 de 6: Comando google e a lista de sugestões
+tutorial.stage12p1=Chame o Ubiquity novamente...
 ##### Stage 13
 
-tutorial.stage13p1=Let's say you want to search Google for cheese.
-tutorial.stage13p2=Type the letter 'g', a space, and the word 'cheese'.
-tutorial.stage13p3=(Like, 'g cheese').
+tutorial.stage13p1=Digamos que quer pesquisar no Google por queijo.
+tutorial.stage13p2=Escreva a letra 'g', espaço, e a palavra 'cheese'.
+tutorial.stage13p3=(Como, 'g cheese').
 ##### Stage 14
 
-tutorial.stage14p1=In the suggestion list, you can see several commands that start with 'g'.  You can use the up-arrow and down-arrow keys to move through the suggestion list.  Try it now:
-tutorial.stage14p2=<strong>tap the down-arrow key</strong> until the <em>google</em> command is hilighted.
+tutorial.stage14p1=Na lista de sugestões, pode ver vários comandos que começam com 'g'. Use as setas para baixo e para cima, para se mover pela lista de sugestões. Tente isto:
+tutorial.stage14p2=<strong>carregue na tecla da seta para baixo</strong> até que o comando <em>google</em> esteja destacado.
 ##### Stage 15
 
-tutorial.stage15p1=The <em>Google</em> command preview shows a snippet from each search result matching your search term.
-tutorial.stage15p2=Those titles are links &#8212; you can click on one of them to open the page in a new tab.
-tutorial.stage15p3=When you're done, close that page and come back here, or just <strong>tap escape</strong> to move on with the tutorial.
+tutorial.stage15p1=O comando <em>Google</em> mostra um extracto de cada resultado correspondente ao seu termo de procura.
+tutorial.stage15p2=Esses títulos são links — pode clicar num deles para abrir a página num novo separador.
+tutorial.stage15p3=Quando acabar, feche essa página e volte aqui, ou <strong>carregue escape</strong> para continuar com o tutorial.
 ##### Stage 16 (part 5 of 6) #####
 
-tutorial.stage16ah1=Part 5 of 6: Selecting and Executing
-tutorial.stage16ap1=Say you're browsing the web and you come across an address &#8212; like the one in the box below &#8212; and you'd like to see it on a map.
-tutorial.stage16ap2=Ubiquity commands can work on your text selection.  Try it out: Use the mouse to <strong>select the address</strong> below. Then <strong>summon Ubiquity</strong>.
-tutorial.stage16bp1=Now <strong>type 'map'</strong>.
-tutorial.stage16cp1=The preview shows a Google Map of the address. You can click on this map to make it bigger; then you can scroll around on the map by dragging it.  Try that now.
-tutorial.stage16cp2=When you're done trying out the map, <strong>hit escape</strong>.
+tutorial.stage16ah1=Parte 5 de 6: Seleccionar e Executar
+tutorial.stage16ap1=Digamos que está a navegar na web e depara-se com uma morada — como uma na caixa abaixo — e gostava de a ver num mapa.
+tutorial.stage16ap2=Os comandos do Ubiquity podem funcionar com o texto seleccionado. Tente isto:  Use o rato para <strong>seleccionar a morada</strong> abaixo. Depois <strong>chame o Ubiquity</strong>.
+tutorial.stage16bp1=Agora <strong>escreva 'mapa'</strong>.
+tutorial.stage16cp1=A pré-visualização mostra a morada no Google Maps. Pode clicar no mapa para o aumentar; depois pode mover-se pelo mapa, arrastando-o. Tente agora.
+tutorial.stage16cp2=Quando acabar de experimentar o mapa, <strong>carregue escape</strong>.
 ##### Stage 17
 
-tutorial.stage17p1=As another example, say you're browsing the web and you come across something written in a language you can't read &#8212; like the Japanese text below.  You can use Ubiquity to get a translation.
-tutorial.stage17p2=First <strong>select the Japanese text below</strong>, then bring up Ubiquity and <strong>use the <em>translate</em> command</strong>.
-tutorial.stage17p3=(type 'translate', or just 'tr').
+tutorial.stage17p1=Como outro exemplo, digamos que está a navegar na web e depara-se com alguma coisa escrita numa língua que não consegue ler — como o texto em Japonês abaixo. Pode usar o Ubiquity para o traduzir.
+tutorial.stage17p2=Primeiro <strong>seleccione o texto Japonês abaixo</strong>, segundo, chame o Ubiquity e <strong>use o comando <em>traduzir</em></strong>.
+tutorial.stage17p3=(escreva 'traduzir', ou apenas 'tr').
 ##### Stage 18
 
-tutorial.stage18p1=At this point, you could type in some words that you want to have Ubiquity translate.  But as you can see in the preview area, Ubiquity is already translating the words that you have selected.
-tutorial.stage18p2=Next, <strong>tap the enter key</strong> to execute the command.
+tutorial.stage18p1=Nesta altura, pode escrever as palavras que seja traduzir com o Ubiquity. Mas como pode ver na área de pré-visualização, o Ubiquity já traduziu as palavras que tem seleccionadas.
+tutorial.stage18p2=Em seguida,<strong>carregue na tecla enter</strong> para executar o comando.
 ##### Stage 19
 
-tutorial.stage19p1=Notice how the Japanese text that you selected was <em>replaced</em> with the translation.  That's because you executed the command by pressing 'enter'.
-tutorial.stage19p2=Each command does something different when you execute it.  Most often, it will open a new page, or change something on the current page.
-tutorial.stage19p3=Click here to continue
+tutorial.stage19p1=Observe como o texto em Japonês seleccionado foi <em>substituído</em> com a tradução. Isto aconteceu porque executou o comando ao pressionar 'enter'.
+tutorial.stage19p2=Cada comando faz algo diferente quando o executa. O mais frequente, é abrir uma nova página, ou mudar algo na página actual.
+tutorial.stage19p3=Clique aqui para continuar
 ##### Stage 20
 
-tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word &#8212; like the one in the box below &#8212; and you'd like to look it up.
-tutorial.stage20p2=Select the word in the box below and then summon Ubiquity.
+tutorial.stage20p1=Vamos ver mais um exemplo. Digamos que está a navegar na web e depara-se com um termo desconhecido — como este na caixa abaixo — e gostaria de procurar o seu significado.
+tutorial.stage20p2=Seleccione a palavra na caixa abaixo e chame o Ubiquity.
 ##### Stage 21
 
-tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or just 'goo').
+tutorial.stage21p1=Agora <strong>use o comando google</strong> (escreva 'google' ou só 'goo').
 ##### Stage 22
 
-tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done &#8212; you can dismiss Ubiquity and go on your way.
-tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
-tutorial.stage22p3=It's up to you.
+tutorial.stage22p1=Agora, se na pré-visualização do comando <em>google</em> encontrar o que procura, então acabou — pode fechar o Ubiquity e continuar o que estava a fazer.
+tutorial.stage22p2=Mas se quiser mais informação, carregue na tecla enter para executar o comando <em>google</em>, que vai abrir os resultados da procura numa nova página.
+tutorial.stage22p3=Você é que decide.
 ##### Stage 23 (part 6 of 6) #####
 
-tutorial.stage23h1=Part 6 of 6: Getting Help and Learning More Commands
-tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity &#8212; plus you can find more on the Web.
-tutorial.stage23p2=How will you find out what commands are available?
-tutorial.stage23p3=One way is by using the <em>help</em> command.
-tutorial.stage23p4=Summon Ubiquity...
+tutorial.stage23h1=Parte 5 de 6: Como obter ajuda e aprender mais comandos
+tutorial.stage23p1=Até agora já aprendeu os comandos <em>tempo</em>, <em>calcular</em>, <em>google</em>, <em>traduzir</em>, e <em>mapa</em>. É um bom começo, mas existem dezenas de comandos incluídos no Ubiquity — e ainda pode encontrar mais na Web.
+tutorial.stage23p2=Como é que vai descobrir que comandos que estão disponíveis?
+tutorial.stage23p3=Uma maneira é usar o comando <em>ajuda</em>.
+tutorial.stage23p4=Chame o Ubiquity...
 ##### Stage 24
 
-tutorial.stage24p1=Suppose you want to know if there are any commands that deal with tabs.  You can use the <em>help</em> command like this:
-tutorial.stage24p2=type 'help tab'.
+tutorial.stage24p1=Suponha que quer saber se existem comandos que lidam com separadores. Pode usar o comando <em>ajuda</em> assim:
+tutorial.stage24p2=escreva 'ajuda tab'
 ##### Stage 25
 
-tutorial.stage25p1=In the suggestion list, you can see all of the commands that have 'tab' in their names.
-tutorial.stage25p2=Use the arrow keys to move through the suggestion list.  The preview area shows help information about each command that you highlight.
-tutorial.stage25p3=When you're done, <strong>tap escape</strong>.
+tutorial.stage25p1=Na lista de sugestões, pode ver os comandos que têm 'tab' no nome.
+tutorial.stage25p2=Use as teclas das setas para se mover pela lista de sugestões. A área de pré-visualização mostra informação sobre cada comando que for destacado.
+tutorial.stage25p3=Quando acabar, <strong>carregue escape</strong>.
 ##### Stage 26
 
-tutorial.stage26p1=Finally, there's the <em>list ubiquity commands</em> command. This command will take you to a page that shows every command Ubiquity has installed.  You can learn all sorts of useful things by browsing the command list page!
-tutorial.stage26p2=This is the end of the tutorial. Once you go to the command list page, you are on your own to experiment and learn new commands at your own pace.
-tutorial.stage26p3=Summon Ubiquity, type 'list', and tap the enter key to execute.
-tutorial.stage26p4=Good-bye!
+tutorial.stage26p1=Por fim, existe o comando <em>lista comandos do ubiquity</em>. Este comando vai leva-lo à página que mostra todos os comandos que o Ubiquity tem instalado. Pode aprender todo o tipo de coisas úteis ao navegar pela página da lista de comandos!
+tutorial.stage26p2=Este é o fim do tutorial. Quando for à página da lista de comandos, está à vontade para experimentar e aprender novos comandos ao seu ritmo.
+tutorial.stage26p3=Chame o Ubiquity, escreva 'lista' e carregue na tecla enter para executar.
+tutorial.stage26p4=Adeus!
