--- a/ubiquity/chrome/locale/zh-CN/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/zh-CN/aboutubiquitytutorial.properties
@@ -11,10 +11,10 @@ tutorial.morecommands=如何获得帮助和了解更多命令
 ##### Stage 01 (part 1 of 6) #####
 
 tutorial.stage01h1=Ubiquity 教程，1/6：如何启动 Ubiquity
-tutorial.stage01p1=欢迎来到Ubiquity 教程。
-tutorial.stage01p2=让我们开始吧。召唤 Ubiquity，现在做到这一点：
+tutorial.stage01p1=欢迎来到 Ubiquity 教程。
+tutorial.stage01p2=让我们开始吧。召唤 Ubiquity，现在就做：
 tutorial.stage01p3=按住
-tutorial.stage01p4=key and tap the
+tutorial.stage01p4=键并使用
 tutorial.stage01p5=键。
 ##### Stage 02
 
@@ -25,47 +25,47 @@ tutorial.stage02p2=如果你想离开 Ubiquity 而不是提供一个命令，<st
 tutorial.stage03h1=Ubiquity 教程，2/6：天气命令和预览
 tutorial.stage03p1=好了，现在让我们再来学习一个命令，再次召唤 Ubiquity...
 tutorial.stage03p2=（请记住，<strong>按住
-tutorial.stage03p3=键和使用
+tutorial.stage03p3=键并使用
 tutorial.stage03p4=键。</strong>）
 ##### Stage 04
 
 tutorial.stage04p1=现在输入单词<strong>weather</strong>...
 ##### Stage 05
 
-tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command &#8212; in this case, a weather report.
-tutorial.stage05p2=If you don't enter a location, the <em>weather</em> command takes a guess as to where you are.
-tutorial.stage05p3=Now let's give it a location: <strong>type a space, and then type 'near chicago'</strong>. (So your whole input will say: 'weather near chicago'.)
+tutorial.stage05p1=即使在您完成输入，<strong>预览区</strong> 显示一个您的命令的预览结果—在这种情况下，一个天气预报。
+tutorial.stage05p2=如果您不输入一个位置，那么<em>weather</em>命令需要推测您在何处。
+tutorial.stage05p3=现在让我们给它一个位置：<strong>输入一个空格，然后输入 “near chicago”</strong>。（因此您输入的完整的命令为：“weather near chicago”）
 ##### Stage 06
 
-tutorial.stage06p1=See how that works?  Feel free to delete &quot;chicago&quot; and try some other locations.
-tutorial.stage06p2=When you're done checking the weather, <strong>hit the escape key.</strong>
+tutorial.stage06p1=看看效果？可以随时删除"chicago"并尝试一些其他地点。
+tutorial.stage06p2=当您完成检查天气，<strong>按下Escape键。</strong>
 ##### Stage 07 (part 3 of 6) #####
 
-tutorial.stage07h1=Ubiquity Tutorial, part 3 of 6: Calculate command and Abbreviations
-tutorial.stage07p1=Summon Ubiquity again, and we'll learn some more commands.
+tutorial.stage07h1=Ubiquity 教程，3/6：计算命令和缩写
+tutorial.stage07p1=再次召唤 Ubiquity，我们将学习更多的命令。
 ##### Stage 08
 
-tutorial.stage08p1=This time, <strong>type just the letter 'c'</strong> (lower-case) and see what happens.
+tutorial.stage08p1=这一次，<strong>输入刚才信的 'c'</strong>（小写）并看看会发生什么。
 ##### Stage 09
 
-tutorial.stage09p1=The Ubiquity <strong>suggestion list</strong> displays commands that start with the letter 'C'.
-tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't have to type the whole command name.  Just <strong>type the letters 'al'</strong> (so that your input says <strong>'cal'</strong>).
+tutorial.stage09p1=这 Ubiquity<strong>建议名单</strong>显示命令开始的文字 'C'。
+tutorial.stage09p2=比如说，您希望<em>calculate</em>命令。您不必输入整个命令的名字。只是<strong>键入字母 'al'</strong>（所以说输入 <strong>'cal'</strong>）。
 ##### Stage 10
 
-tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
+tutorial.stage10p1=现在<strong>键入一个空格，然后键入 22/7</strong>（所以说你的输入的大概是<strong>'cal 22/7'</strong>。）
 ##### Stage 11
 
-tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
-tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
+tutorial.stage11p1=这个 <em>calculate</em>命令将显示您的结果，您键入以下任何算术表达式。
+tutorial.stage11p2=当您完成试验<em>calculate</em><strong>击中Escape键</strong>
 ##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
-tutorial.stage12p1=Summon Ubiquity again...
+tutorial.stage12h1=Ubiquity 教程，4/6：Google 命令和建议列表
+tutorial.stage12p1=再次召唤 Ubiquity...
 ##### Stage 13
 
-tutorial.stage13p1=Let's say you want to search Google for cheese.
-tutorial.stage13p2=Type the letter 'g', a space, and the word 'cheese'.
-tutorial.stage13p3=(Like, 'g cheese').
+tutorial.stage13p1=比如说，您要搜索Google for cheese。
+tutorial.stage13p2=输入字母 'g'，一个空格，和'cheese'这个词。
+tutorial.stage13p3=（像，'g cheese'）。
 ##### Stage 14
 
 tutorial.stage14p1=In the suggestion list, you can see several commands that start with 'g'.  You can use the up-arrow and down-arrow keys to move through the suggestion list.  Try it now:
@@ -77,26 +77,26 @@ tutorial.stage15p2=Those titles are links &#8212; you can click on one of them t
 tutorial.stage15p3=When you're done, close that page and come back here, or just <strong>tap escape</strong> to move on with the tutorial.
 ##### Stage 16 (part 5 of 6) #####
 
-tutorial.stage16ah1=Part 5 of 6: Selecting and Executing
+tutorial.stage16ah1=5/6：选择和执行
 tutorial.stage16ap1=Say you're browsing the web and you come across an address &#8212; like the one in the box below &#8212; and you'd like to see it on a map.
 tutorial.stage16ap2=Ubiquity commands can work on your text selection.  Try it out: Use the mouse to <strong>select the address</strong> below. Then <strong>summon Ubiquity</strong>.
-tutorial.stage16bp1=Now <strong>type 'map'</strong>.
+tutorial.stage16bp1=现在 <strong>输入 'map'</strong>.
 tutorial.stage16cp1=The preview shows a Google Map of the address. You can click on this map to make it bigger; then you can scroll around on the map by dragging it.  Try that now.
-tutorial.stage16cp2=When you're done trying out the map, <strong>hit escape</strong>.
+tutorial.stage16cp2=当您完成尝试地图，<strong>按 escape</strong>。
 ##### Stage 17
 
 tutorial.stage17p1=As another example, say you're browsing the web and you come across something written in a language you can't read &#8212; like the Japanese text below.  You can use Ubiquity to get a translation.
 tutorial.stage17p2=First <strong>select the Japanese text below</strong>, then bring up Ubiquity and <strong>use the <em>translate</em> command</strong>.
-tutorial.stage17p3=(type 'translate', or just 'tr').
+tutorial.stage17p3=(类型 'translate'，或只是 'tr').
 ##### Stage 18
 
 tutorial.stage18p1=At this point, you could type in some words that you want to have Ubiquity translate.  But as you can see in the preview area, Ubiquity is already translating the words that you have selected.
-tutorial.stage18p2=Next, <strong>tap the enter key</strong> to execute the command.
+tutorial.stage18p2=然后，<strong>按下 Enter 键</strong>来执行命令。
 ##### Stage 19
 
 tutorial.stage19p1=Notice how the Japanese text that you selected was <em>replaced</em> with the translation.  That's because you executed the command by pressing 'enter'.
 tutorial.stage19p2=Each command does something different when you execute it.  Most often, it will open a new page, or change something on the current page.
-tutorial.stage19p3=Click here to continue
+tutorial.stage19p3=点击这里继续
 ##### Stage 20
 
 tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word &#8212; like the one in the box below &#8212; and you'd like to look it up.
@@ -108,26 +108,26 @@ tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or
 
 tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done &#8212; you can dismiss Ubiquity and go on your way.
 tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
-tutorial.stage22p3=It's up to you.
+tutorial.stage22p3=就看你的。
 ##### Stage 23 (part 6 of 6) #####
 
-tutorial.stage23h1=Part 6 of 6: Getting Help and Learning More Commands
+tutorial.stage23h1=6/6：获得帮助并学习更多命令
 tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity &#8212; plus you can find more on the Web.
-tutorial.stage23p2=How will you find out what commands are available?
-tutorial.stage23p3=One way is by using the <em>help</em> command.
-tutorial.stage23p4=Summon Ubiquity...
+tutorial.stage23p2=您如何找出可供使用的命令？
+tutorial.stage23p3=一种方法是使用<em>help</em>命令。
+tutorial.stage23p4=召唤 Ubiquity...
 ##### Stage 24
 
 tutorial.stage24p1=Suppose you want to know if there are any commands that deal with tabs.  You can use the <em>help</em> command like this:
-tutorial.stage24p2=type 'help tab'.
+tutorial.stage24p2=类型 'help tab'。
 ##### Stage 25
 
 tutorial.stage25p1=In the suggestion list, you can see all of the commands that have 'tab' in their names.
 tutorial.stage25p2=Use the arrow keys to move through the suggestion list.  The preview area shows help information about each command that you highlight.
-tutorial.stage25p3=When you're done, <strong>tap escape</strong>.
+tutorial.stage25p3=当您完成，<strong>键入 escape</strong>。
 ##### Stage 26
 
 tutorial.stage26p1=Finally, there's the <em>list ubiquity commands</em> command. This command will take you to a page that shows every command Ubiquity has installed.  You can learn all sorts of useful things by browsing the command list page!
-tutorial.stage26p2=This is the end of the tutorial. Once you go to the command list page, you are on your own to experiment and learn new commands at your own pace.
-tutorial.stage26p3=Summon Ubiquity, type 'list', and tap the enter key to execute.
-tutorial.stage26p4=Good-bye!
+tutorial.stage26p2=这是最后的教程。一旦你去命令列表页，您自己试验新的命令，按照自己的学习进度。
+tutorial.stage26p3=召唤 Ubiquity，输入 'list'，并按Enter键执行。
+tutorial.stage26p4=再见！
