--- a/ubiquity/chrome/locale/nl-NL/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/nl-NL/aboutubiquity.properties
@@ -22,7 +22,7 @@ ubiquity.nav.hackubiquity=Werk mee aan Ubiquity
 
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
-ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
+ubiquity.prefkeys.notifybadmodifier=U moet een bewerkers toets hebben zoals SHIFT, CTRL, ALT of META.
 ubiquity.prefkeys.notifyalphanumeric=Alleen alfa-numerieke toetsen en spatie zijn toegestaan.
 ubiquity.prefkeys.clickhere=Klik hier om te wijzigen
 # After a change occurs this is the confirmation along with modifier names
@@ -47,14 +47,14 @@ ubiquity.prefkeys.pressyourcombo=Typ uw combanitie...
 
 ############################
 
-ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
-ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
-ubiquity.settings.skinsaved=Your skin has been saved!
-ubiquity.settings.skinerror=Error saving your skin.
-ubiquity.settings.skinauthor=created by %S
-ubiquity.settings.skinlicense=licensed as %S
-ubiquity.settings.viewskinsource=view source
-ubiquity.settings.uninstallskin=uninstall
+ubiquity.settings.restartfirefox=Deze verandering zal pas effect hebben wanneer u Firofox herstart.
+ubiquity.settings.opennewwindows=Deze verandering zal effect hebben wanneer u nieuwe vensters opent.
+ubiquity.settings.skinsaved=Uw thema is opgeslagen!
+ubiquity.settings.skinerror=Er was een probleem tijdens het opslagen van uw thema.
+ubiquity.settings.skinauthor=gemaakt door %S
+ubiquity.settings.skinlicense=gelicensieerd as %S
+ubiquity.settings.viewskinsource=bekijke broncode
+ubiquity.settings.uninstallskin=verwijderen
 ############################
 
 # localization-template.js
@@ -93,20 +93,20 @@ ubiquity.showhidehelp.hide=Verberg Help
 
 ############################
 
-ubiquity.cmdlist.unsubscribefeed=unsubscribe
-ubiquity.cmdlist.feedupdated=An update for this feed is available.
-ubiquity.cmdlist.viewsource=view source
-ubiquity.cmdlist.viewfeedsource=view auto-updated source
+ubiquity.cmdlist.unsubscribefeed=uitschrijven
+ubiquity.cmdlist.feedupdated=Een update voor deze feed is beschikbaar.
+ubiquity.cmdlist.viewsource=bekijk bron
+ubiquity.cmdlist.viewfeedsource=bekijk geüpdate bron
 ubiquity.cmdlist.localetemplate=get localization template
-ubiquity.cmdlist.synonyms=also called %S
-ubiquity.cmdlist.createdby=by %S
-ubiquity.cmdlist.license=licensed as %S
-ubiquity.cmdlist.contributions=contributions by %S
-ubiquity.cmdlist.homepage=homepage
-ubiquity.cmdlist.viewmoreinfo=view more information at %S
-ubiquity.cmdlist.oldparsertitle=This command was not loaded as it is incompatible with Parser 2.
-ubiquity.cmdlist.resubscribe=resubscribe
-ubiquity.cmdlist.purge=purge
+ubiquity.cmdlist.synonyms=ook %S genoemd
+ubiquity.cmdlist.createdby=door %S
+ubiquity.cmdlist.license=gelicensieerd als %S
+ubiquity.cmdlist.contributions=toevoegingen door %S
+ubiquity.cmdlist.homepage=thuispagina
+ubiquity.cmdlist.viewmoreinfo=bekijk meer informatie op %S
+ubiquity.cmdlist.oldparsertitle=Deze opdracht werd niet ingeladen omdat het niet compatibel is met Parser 2.
+ubiquity.cmdlist.resubscribe=herinschrijven
+ubiquity.cmdlist.purge=compleet verwijderen
 ############################
 
 # thenext.js
